[tool.poetry]
name = "youtube-id"
version = "1.0.4"
description = "Generate YouTube-style short IDs from numbers. Lightweight, fast, and reversible base62 encoder with optional obfuscation."
authors = [
    "Oleksii Samara <oleksii@wildsoft.io>",
    "Kevin van Zonneveld <kevin@transloadit.com>"
]
license = "MIT"
readme = "README.md"
keywords = [
    "youtube-id",
    "short-id",
    "base62",
    "hashid",
    "url-shortener",
    "id-generator",
    "encoder",
    "obfuscation",
    "alphanumeric",
    "unique-id",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "yid_py"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/wow-apps/youtube-id-py"
"Repository" = "https://github.com/wow-apps/youtube-id-py"
"Documentation" = "https://github.com/wow-apps/youtube-id-py#readme"
"Bug Tracker" = "https://github.com/wow-apps/youtube-id-py/issues"
"Changelog" = "https://github.com/wow-apps/youtube-id-py/releases"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14,<0.16"
pytest = "^9.0"
pytest-cov = "^7.0"
mypy = "^1.19"
pymarkdownlnt = "^0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
